feature(droid_queue): Adds handling for the droid_queue inside the MostRecentChecksum.
This feature is related to the DROID validation and improves the DROID process queue with proper query and parameters.

ref: GLAM-1232,GLAM-1233